[package]

name = "morphism"
version = "0.4.1"
authors = [ "Darin Morrison <darinmorrison+rust@gmail.com>" ]
description = "A structure for suspended closure composition in Rust"
documentation = "http://freebroccolo.github.io/morphism.rs/doc/morphism/"
keywords = ["closures", "functional", "monoid", "stackless"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/freebroccolo/morphism.rs"

[lib]
name = "morphism"
path = "src/lib.rs"
